--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
 
+.idea/libraries
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/dictionaries
