--- a/rchat-client/pom.xml
+++ b/rchat-client/pom.xml
@@ -37,5 +37,11 @@
             <artifactId>resin</artifactId>
             <version>3.0.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.xmlrpc</groupId>
+            <artifactId>xmlrpc-client</artifactId>
+            <version>3.1.3</version>
+        </dependency>
     </dependencies>
 </project>
