--- a/rchat-server/pom.xml
+++ b/rchat-server/pom.xml
@@ -67,5 +67,11 @@
             <artifactId>resin</artifactId>
             <version>3.0.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.xmlrpc</groupId>
+            <artifactId>xmlrpc-server</artifactId>
+            <version>3.1.3</version>
+        </dependency>
     </dependencies>
 </project>
