--- a/rchat-server/pom.xml
+++ b/rchat-server/pom.xml
@@ -73,5 +73,25 @@
             <artifactId>xmlrpc-server</artifactId>
             <version>3.1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>20.0-rc1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.jcip</groupId>
+            <artifactId>jcip-annotations</artifactId>
+            <version>1.0</version>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>15.0</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
