--- a/rchat-server/pom.xml
+++ b/rchat-server/pom.xml
@@ -75,6 +75,12 @@
         </dependency>
 
         <dependency>
+            <groupId>pl.nn44</groupId>
+            <artifactId>apache-xml-rpc-extension</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>20.0-rc1</version>
