--- a/rchat-client/pom.xml
+++ b/rchat-client/pom.xml
@@ -43,5 +43,11 @@
             <artifactId>xmlrpc-client</artifactId>
             <version>3.1.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>pl.nn44</groupId>
+            <artifactId>apache-xml-rpc-extension</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 </project>
