--- a/rchat-server/pom.xml
+++ b/rchat-server/pom.xml
@@ -20,7 +20,6 @@
 
     <build>
         <plugins>
-
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -77,7 +76,7 @@
 
         <dependency>
             <groupId>pl.nn44</groupId>
-            <artifactId>apache-xml-rpc-extension</artifactId>
+            <artifactId>apache-xmlrpc-extension</artifactId>
             <version>1.0</version>
         </dependency>
 
