--- a/rchat-protocol/pom.xml
+++ b/rchat-protocol/pom.xml
@@ -18,14 +18,13 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>20.0-rc1</version>
+            <version>20.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
             <version>15.0</version>
-            <optional>true</optional>
         </dependency>
     </dependencies>
 </project>
