--- a/rchat-server/pom.xml
+++ b/rchat-server/pom.xml
@@ -79,5 +79,11 @@
             <artifactId>apache-xmlrpc-extension</artifactId>
             <version>1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>3.0.6</version>
+        </dependency>
     </dependencies>
 </project>
