--- a/rchat-client/pom.xml
+++ b/rchat-client/pom.xml
@@ -15,29 +15,34 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <!-- rchat protocol -->
         <dependency>
             <groupId>pl.nn44</groupId>
             <artifactId>rchat-protocol</artifactId>
             <version>1.0</version>
         </dependency>
 
+        <!-- spring boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- hessian -->
         <dependency>
             <groupId>com.caucho</groupId>
             <artifactId>hessian</artifactId>
             <version>4.0.38</version>
         </dependency>
 
+        <!-- burlap -->
         <dependency>
             <groupId>com.caucho</groupId>
             <artifactId>resin</artifactId>
             <version>3.0.9</version>
         </dependency>
 
+        <!-- xml rpc -->
         <dependency>
             <groupId>org.apache.xmlrpc</groupId>
             <artifactId>xmlrpc-client</artifactId>
