server: add aop logger

--- a/rchat-server/pom.xml
+++ b/rchat-server/pom.xml
@@ -58,6 +58,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- aop -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
         <!-- hessian -->
         <dependency>
             <groupId>com.caucho</groupId>
