--- a/apache-xmlrpc-extension/pom.xml
+++ b/apache-xmlrpc-extension/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>org.apache.xmlrpc</groupId>
             <artifactId>xmlrpc-common</artifactId>
-            <version>3.1.3</version>
+            <version>${version.xmlrpc}</version>
         </dependency>
     </dependencies>
 </project>
