--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <version.self>1.0</version.self>
+        <version.hessian>4.0.38</version.hessian>
+        <version.burlap>2.1.12</version.burlap>
+        <version.xmlrpc>3.1.3</version.xmlrpc>
+        <version.janino>3.0.6</version.janino>
+        <version.guava>20.0</version.guava>
+        <version.jetann>15.0</version.jetann>
     </properties>
 
     <parent>
