--- a/rchat-client/pom.xml
+++ b/rchat-client/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>pl.nn44</groupId>
             <artifactId>rchat-protocol</artifactId>
-            <version>1.0</version>
+            <version>${version.self}</version>
         </dependency>
 
         <!-- spring boot -->
@@ -32,27 +32,27 @@
         <dependency>
             <groupId>com.caucho</groupId>
             <artifactId>hessian</artifactId>
-            <version>4.0.38</version>
+            <version>${version.hessian}</version>
         </dependency>
 
         <!-- burlap -->
         <dependency>
             <groupId>com.caucho</groupId>
-            <artifactId>resin</artifactId>
-            <version>3.0.9</version>
+            <artifactId>burlap</artifactId>
+            <version>${version.burlap}</version>
         </dependency>
 
         <!-- xml rpc -->
         <dependency>
             <groupId>org.apache.xmlrpc</groupId>
             <artifactId>xmlrpc-client</artifactId>
-            <version>3.1.3</version>
+            <version>${version.xmlrpc}</version>
         </dependency>
 
         <dependency>
             <groupId>pl.nn44</groupId>
             <artifactId>apache-xmlrpc-extension</artifactId>
-            <version>1.0</version>
+            <version>${version.self}</version>
         </dependency>
     </dependencies>
 </project>
