--- a/rchat-protocol/pom.xml
+++ b/rchat-protocol/pom.xml
@@ -18,13 +18,14 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>20.0</version>
+            <version>${version.guava}</version>
         </dependency>
 
         <dependency>
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
-            <version>15.0</version>
+            <version>${version.jetann}</version>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 </project>
