general: fix double burlap lib

--- a/rchat-client/pom.xml
+++ b/rchat-client/pom.xml
@@ -41,18 +41,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <!-- hessian -->
+        <!-- hessian, burlap -->
         <dependency>
             <groupId>com.caucho</groupId>
             <artifactId>hessian</artifactId>
             <version>${version.hessian}</version>
-        </dependency>
-
-        <!-- burlap -->
-        <dependency>
-            <groupId>com.caucho</groupId>
-            <artifactId>burlap</artifactId>
-            <version>${version.burlap}</version>
         </dependency>
 
         <!-- xml rpc -->
