--- a/rchat-client/pom.xml
+++ b/rchat-client/pom.xml
@@ -35,7 +35,7 @@
             <version>${version.self}</version>
         </dependency>
 
-        <!-- spring boot -->
+        <!-- spring remoting -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
