--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <version.xmlrpc>3.1.3</version.xmlrpc>
         <version.janino>3.0.6</version.janino>
         <version.guava>20.0</version.guava>
-        <version.jetann>15.0</version.jetann>
+        <version.jsr305>3.0.1</version.jsr305>
     </properties>
 
     <parent>
