--- a/rchat-protocol/pom.xml
+++ b/rchat-protocol/pom.xml
@@ -22,9 +22,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>${version.jetann}</version>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>${version.jsr305}</version>
             <optional>true</optional>
         </dependency>
     </dependencies>
