--- a/rchat-server/pom.xml
+++ b/rchat-server/pom.xml
@@ -94,9 +94,9 @@
 
         <!-- other -->
         <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>${version.jetann}</version>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>${version.jsr305}</version>
             <optional>true</optional>
         </dependency>
     </dependencies>
