--- a/apache-xmlrpc-extension/pom.xml
+++ b/apache-xmlrpc-extension/pom.xml
@@ -20,5 +20,19 @@
             <artifactId>xmlrpc-common</artifactId>
             <version>${version.xmlrpc}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.xmlrpc</groupId>
+            <artifactId>xmlrpc-server</artifactId>
+            <version>${version.xmlrpc}</version>
+            <optional>true</optional>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.xmlrpc</groupId>
+            <artifactId>xmlrpc-client</artifactId>
+            <version>${version.xmlrpc}</version>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 </project>
